Suppress warning for findBugs